--- a/03.2_classical_models.ipynb
+++ b/03.2_classical_models.ipynb
@@ -7,27 +7,19 @@
    "source": [
     "# Classical Forecasting for Exchange Rates\n",
     "\n",
+    "In this notebook, we will explore classical forecasting methods. To gain familiarity with the dataset, refer to the preceding notebook on exploratory analysis of the dataset. We will build the following methods:\n",
     "\n",
-    "In this notebook, we will explore the classical forecasting methods. \n",
+    "- **ARIMA:** Auto-Regressive Integrated Moving Average Models\n",
+    "- **Holt-Winters Model:** Exponential Smoothing modeling of time series forecasting\n",
+    "- **Vector Auto-Regression:** Modeling multiple time series together as a vector\n",
     "\n",
-    "To gain familiarity with the dataset, look at the predecessor notebook on exploratory analysis of the dataset. \n",
-    "We will build the following methods \n",
+    "By the end of this notebook, we will:\n",
     "\n",
-    "- ARIMA: Auto-Regressive Integrate Moving Average Models\n",
-    "- Holt-Winters Model: Exponential Smoothing modeling of time series forecasting. \n",
-    "- Vector Auto-Regression: Modeling mutliple time series together as a vector.\n",
+    "- Compare the above methods using the MASE metric\n",
+    "- Understand the drawbacks of MAE and empirically support the use of MASE\n",
+    "- Estimate MASE for different horizons\n",
+    "- Plot the predictions by these models and compare them visually\n",
     "\n",
-    "At the end of this notebook, we will be able to compare the above methods on the MASE metric. \n",
-    "We will learn the drawbacks of MAE and empirically inspire the use of MASE.\n",
-    "We will estimate MASE for different horizons.\n",
-    "We will plot the predictions by these models and compare them visually. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e16b5ec4-5b6e-432d-bb9b-b2ca4e840a67",
-   "metadata": {},
-   "source": [
     "## Setup"
    ]
   },
@@ -135,16 +127,13 @@
    "source": [
     "## ARIMA\n",
     "\n",
-    "From the previous notebook, we observed that there is no seasonality in the data. \n",
-    "As a result, we will fit the ARIMA model instead. \n",
-    "We still need to find the best parameters for each time series. \n",
-    "So we will run a grid search to do so. \n",
+    "From the previous notebook, we observed that there is no seasonality in the data. As a result, we will fit the ARIMA model. We need to find the best parameters for each time series, so we will perform a grid search on each of them.\n",
     "\n",
-    "If you are interested in finding the best parameters wthout having to go for grid search, checkout `pmdarima.auto_arima` ([documentation here](https://alkaline-ml.com/pmdarima/modules/generated/pmdarima.arima.AutoARIMA.html#pmdarima.arima.AutoARIMA))\n",
+    "If you are interested in finding the best parameters without a grid search, check out `pmdarima.auto_arima` ([documentation here](https://alkaline-ml.com/pmdarima/modules/generated/pmdarima.arima.AutoARIMA.html#pmdarima.arima.AutoARIMA)).\n",
     "\n",
-    "Recall, that these models minimize an objective (likelihood), which is encapsulated in Akaike-Information Criterion (AIC). As a result, the model with the best AIC should be more appropriate for the time series at hand. To check whether this corresponds to MASE, we will also compute this metric on validation set and track the parameters that perform best on MASE.\n",
+    "These models minimize an objective function (likelihood) encapsulated in the Akaike Information Criterion (AIC). Therefore, the model with the best AIC should be more suitable for the time series at hand. To verify if this corresponds to the Mean Absolute Scaled Error (MASE), we will also compute this metric on the validation set and track the parameters that perform best on MASE.\n",
     "\n",
-    "*Note*: Some parameters might lead to warning as the underlying model might be underconstrained. "
+    "**Note:** Some parameters might lead to warnings as the underlying model might be under-constrained.\n"
    ]
   },
   {
@@ -388,13 +377,13 @@
    "id": "64c90ce6-2a35-44ea-bafa-2853c6703be4",
    "metadata": {},
    "source": [
-    "### Metrics On Test Data\n",
+    "### Metrics on Test Data\n",
     "\n",
-    "Observe that the best parameters according to the two criterion - AIC and MASE differ quite a lot. \n",
+    "Observe that the best parameters according to the two criteria - AIC and MASE, differ significantly.\n",
     "\n",
-    "To measure the performance on the test data, we will retrain the model on the combined train-val dataset, and compute the MASE metric on the test dataset. \n",
+    "To measure performance on the test data, we will retrain the model on the combined train-validation dataset and compute the MASE metric on the test dataset. \n",
     "\n",
-    "We also store test_predictions so that we can compare these predictions later on with other methods."
+    "We will also store test predictions to compare them later with other methods."
    ]
   },
   {
@@ -687,11 +676,11 @@
    "id": "25a22b73-a9e8-4717-aeeb-734e105d6338",
    "metadata": {},
    "source": [
-    "**Metrics:**\n",
-    "We see that even though MAE values are very low, MASE indicates that a MAE naive can still do better. \n",
-    "We will use MASE metric from now on to compare the models\n",
+    "**Observations:**\n",
     "\n",
-    "Similarly, it's evident that RSE is much better than MSE as it says something about how much better one can do relative to predicting the historical mean. Any value greater than 1 means you can do better by just predicting the mean of the past values."
+    "- Even though MAE values are low, MASE indicates that a naive MAE model can still perform better. We will use the MASE metric from now on to compare the models.\n",
+    "\n",
+    "- Similarly, RSE is much better than MSE as it indicates how much better one can do relative to predicting the historical mean. Any RSE value greater than 1 means you could do better by just predicting the mean of past values."
    ]
   },
   {
@@ -994,9 +983,7 @@
    "id": "219b61e9-15a0-4266-94a4-b645fbbb9ee8",
    "metadata": {},
    "source": [
-    "### Store Predictions \n",
-    "\n",
-    "We will save predictions to be able to compare them later against other methods."
+    "### Plot Predictions "
    ]
   },
   {
@@ -1223,9 +1210,8 @@
    "id": "4363dc47-b6d0-4dda-8383-5043800cccec",
    "metadata": {},
    "source": [
-    "### Plot predictions\n",
     "\n",
-    "Feel free to change the column and see how well does the ARIMA model does."
+    "**Note:** Feel free to change the column and see how well does the ARIMA model does."
    ]
   },
   {
@@ -1286,7 +1272,7 @@
    "source": [
     "## Exponential Smoothing Models\n",
     "\n",
-    "Here we will build models using Holt's Linear Trend and Holt-Winter's extension to account for seasonality."
+    "In this section, we will build models using Holt's Linear Trend and the Holt-Winters extension to account for seasonality."
    ]
   },
   {
@@ -2239,14 +2225,13 @@
    "source": [
     "## Vector Auto-Regression (VAR)\n",
     "\n",
-    "As the name suggests, VAR models auto-regress on vectors rather than scalar as in univariate time series. \n",
-    "VAR models follow a simple mathematical formulation, and are trained using Maximum Likelihood Estimation (MLE) principles. \n",
-    "These are somewhat different from VARMA models which involve error terms and are optimized using iterative MLE. \n",
+    "As the name suggests, VAR models perform auto-regression on vectors rather than scalars, as in univariate time series. VAR models follow a simple mathematical formulation and are trained using Maximum Likelihood Estimation (MLE) principles. They differ from VARMA models, which involve error terms and are optimized using iterative MLE.\n",
     "\n",
-    "For this tutorial, we will only look at VAR models, but feel free to test out the VARMA models using `VARMAX` module. Refer to the [documentation](https://www.statsmodels.org/dev/generated/statsmodels.tsa.statespace.varmax.VARMAX.html#statsmodels.tsa.statespace.varmax.VARMAX) of VARMAX for more details. One can test several hyperparameters with VARMAX models which include both AR and MA models in multi-variate regression. \n",
-    "Here, for the sake of time, we will be looking at VAR models with explicit differencing since they are faster to train.\n",
+    "For this tutorial, we will focus on VAR models, but you are welcome to explore VARMA models using the `VARMAX` module. Refer to the [documentation](https://www.statsmodels.org/dev/generated/statsmodels.tsa.statespace.varmax.VARMAX.html#statsmodels.tsa.statespace.varmax.VARMAX) for more details. VARMAX models incorporate both AR and MA components in multivariate regression and allow for testing various hyperparameters. \n",
     "\n",
-    "**Evaluation:** Note that the evaluation metric will have to be average MASE across the columns. \n"
+    "Here, for the sake of time, we will focus on VAR models with explicit differencing, as they are faster to train.\n",
+    "\n",
+    "**Evaluation Metric:** The evaluation metric will be the average MASE across the columns."
    ]
   },
   {
@@ -2311,8 +2296,7 @@
    "source": [
     "### VAR with Differencing\n",
     "\n",
-    "Another way to induce complexity in VAR models is to use explicit differencing. This is the same as \"I\" in ARIMA models. \n",
-    "However, we do it explicity here. "
+    "Another way to introduce complexity in VAR models is to use explicit differencing, similar to the \"I\" (Integrated) component in ARIMA models. However, in this case, we apply differencing explicitly."
    ]
   },
   {
@@ -2361,7 +2345,7 @@
    "source": [
     "### Metrics On Test Data\n",
     "\n",
-    "We observe that the simple VAR model is better, so we use that here."
+    "We observe that the simple VAR model is better so we use that here."
    ]
   },
   {
@@ -2788,7 +2772,7 @@
    "id": "df38200b-dead-486e-bf49-06c5a7abd4b2",
    "metadata": {},
    "source": [
-    "## Plot predictions"
+    "### Plot predictions"
    ]
   },
   {
@@ -3134,7 +3118,12 @@
     "[`pmdarima` library](https://alkaline-ml.com/pmdarima/index.html) in python provides an automatic parameter tuning library in Python. \n",
     "\n",
     "Here is the [documentation](https://alkaline-ml.com/pmdarima/modules/generated/pmdarima.arima.AutoARIMA.html#pmdarima.arima.AutoARIMA) of `pmd.auto_arima` which I encourage to read to get familiar with the parameters. \n",
-    "Since it doesn't run hyperparameter search on the seasonality parameter, you will have to run a parameter selection on it, and select the one with the best AIC Score / validation score. \n"
+    "Since it doesn't run hyperparameter search on the seasonality parameter, you will have to run a parameter selection on it, and select the one with the best AIC Score / validation score. \n",
+    "\n",
+    "\n",
+    "## Next Steps\n",
+    "\n",
+    "Proceed to `04_ml_methods.ipynb` to explore machine learning forecasting methods. "
    ]
   }
  ],
