--- a/03.2_classical_models.ipynb
+++ b/03.2_classical_models.ipynb
@@ -3115,11 +3115,9 @@
    "source": [
     "## Auto ARIMA\n",
     "\n",
-    "[`pmdarima` library](https://alkaline-ml.com/pmdarima/index.html) in python provides an automatic parameter tuning library in Python. \n",
+    "The [`pmdarima` library](https://alkaline-ml.com/pmdarima/index.html) in Python provides an automatic parameter tuning feature for ARIMA models. \n",
     "\n",
-    "Here is the [documentation](https://alkaline-ml.com/pmdarima/modules/generated/pmdarima.arima.AutoARIMA.html#pmdarima.arima.AutoARIMA) of `pmd.auto_arima` which I encourage to read to get familiar with the parameters. \n",
-    "Since it doesn't run hyperparameter search on the seasonality parameter, you will have to run a parameter selection on it, and select the one with the best AIC Score / validation score. \n",
-    "\n",
+    "Refer to the [documentation](https://alkaline-ml.com/pmdarima/modules/generated/pmdarima.arima.AutoARIMA.html#pmdarima.arima.AutoARIMA) for `pmd.auto_arima` to familiarize yourself with the parameters. Note that it does not perform hyperparameter search on the seasonality parameter, so you will need to manually select the best seasonality parameter based on the AIC score or validation score.\n",
     "\n",
     "## Next Steps\n",
     "\n",
